fix spacing

--- a/graduate-styles.css
+++ b/graduate-styles.css
@@ -1,3 +1,93 @@
+/* body {
+    background-color: rgb(255, 255, 255);
+    color: #000000;
+    font-family: Arial, sans-serif;
+}
+
+br {
+    margin: 5px 0px;
+}
+
+#sketch-container{
+    height: 175px;
+    width: 100%;
+}
+
+details {
+    margin: 20px;
+}
+
+summary {
+    margin: 20px 40px 10px 40px;
+    padding: 5px;
+    border: 2px solid black;
+    border-radius: 35px;
+    cursor: pointer;
+
+    text-align: center;
+    font-size: 32px;
+    color: black;
+}
+
+.project-info {
+    margin: 0px 50px 0px 50px;
+    padding: 5px 10px 10px 10px;
+
+    font-size: 22px;
+    line-height: 1.3;
+}
+
+.media-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    width: min-content;
+    max-width: 90vw;
+    height: 10vw;
+    margin: 20px auto;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.media-div {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.media-div iframe, .media-div img {
+    height: 100%;
+    width: auto;
+    object-fit: contain;
+    display: block;
+}
+
+.pdf-div {
+    height: 400px;
+}
+
+.video-div {
+    height: 300px;
+}
+
+.pdf-frame {
+    height: 100%; 
+    margin: 0px 10px 0px 10px;
+}
+
+.vid-frame {
+    height: 100%;
+    margin: 0px 10px 0px 10px;
+}
+
+.project-note {
+    margin: 15px 0px;
+    font-style: italic;
+} */
+
 body {
     /* background-color: rgb(0, 0, 35); */
     /* color: #FFFFFF; */
@@ -46,14 +136,16 @@ summary {
     display: flex; 
     flex-direction: row; 
     justify-content: center; 
+    height: 20vw;
 }
 
-.pdf-div {
-    height: 400px;
+.pdf-div, .video-div {
+    height: 100%;
 }
 
-.video-div {
-    height: 300px;
+.img-div {
+    height: 100%;
+    margin: 0 10px 0 10px;
 }
 
 .pdf-frame {
@@ -64,6 +156,11 @@ summary {
 .vid-frame {
     height: 100%;
     margin: 0px 10px 0px 10px;
+}
+
+.img-frame {
+    height: 100%;
+    width: auto;
 }
 
 .project-note {
